Closed
Bug 179172
Opened 23 years ago
Closed 23 years ago
Context menu no longer appears in thread or folder panes
Categories
(SeaMonkey :: MailNews: Message Display, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
mozilla1.3alpha
People
(Reporter: caillon, Assigned: bryner)
References
Details
(Keywords: regression)
Attachments
(1 file, 1 obsolete file)
|
1.47 KB,
patch
|
janv
:
review+
blizzard
:
superreview+
|
Details | Diff | Splinter Review |
Linux build 2002110822:
1. Load mailnews
2. Right click on any message.
Expected results:
Context menu appears
Actual results: nothing happens.
This worked as recently as 2002110710.
| Reporter | ||
Updated•23 years ago
|
Keywords: regression
| Reporter | ||
Comment 1•23 years ago
|
||
Whoops, I meant thread pane.
Summary: Context menu no longer appears in message pane → Context menu no longer appears in thread pane
Comment 2•23 years ago
|
||
I can confirm this with the latest nightly on Linux.
Comment 4•23 years ago
|
||
wfm lnux trunk cvs 2002-11-08 ~11pdt, so it looks like 2002-11-08 11 / 22
I'm unable to get context menu in either thread pane or accounts sidebar
(right-click on a folder, for example)
Message pane context menu still works fine.
2002110921 under linux
Comment 7•23 years ago
|
||
I'm able to reproduce this with an official build from ftp.mozilla.org
Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.3a) Gecko/20021111
both folder pane and thread pane.
I'll see if any other trees are having context menu issues.
Comment 8•23 years ago
|
||
I just did a debug build, and it seems to be working there.
so the first two things that come to mind are:
1) a regression (that was recently fixed)
2) a packaging issue.
Comment 9•23 years ago
|
||
or
3) something debug vs. opt.
| Reporter | ||
Comment 10•23 years ago
|
||
I just pulled the latest build (2002111122) and it is still broken there. This
rules out #1.
| Reporter | ||
Comment 11•23 years ago
|
||
Could this be caused by bryner's checkin for bug 124990 maybe?
| Reporter | ||
Comment 12•23 years ago
|
||
for reference:
http://bonsai.mozilla.org/cvsquery.cgi?treeid=default&module=all&branch=&branchtype=match&dir=&file=&filetype=match&who=bryner%25netscape.com&whotype=match&sortby=Date&hours=2&date=explicit&mindate=11%2F08%2F2002+16%3A20%3A00&maxdate=11%2F08%2F2002+16%3A30%3A00&cvsroot=%2Fcvsroot
I'm going to try to back this out tonight and see if it fixes the regression.
Comment 13•23 years ago
|
||
In my opt build, fillThreadPaneContextMenu() and fillFolderPaneContextMenu()
aren't getting called, but they are in my debug build.
| Reporter | ||
Comment 14•23 years ago
|
||
I just did a local backout of the event re-ordering patch from bug 124990.
After backing it out, context menus work again in mail...
Comment 15•23 years ago
|
||
*** Bug 179681 has been marked as a duplicate of this bug. ***
Comment 16•23 years ago
|
||
> I just did a debug build, and it seems to be working there.
I'm such a loser.
I do a debug build, and it only works because I do:
cd dist/bin
mozilla -mail
instead of
cd dist/bin
./mozilla -mail
broken on debug and opt. see what using win32 99% of the time does to you?
re-assign to bryner, as his patch for #124990 appears to have caused this.
(callion asked me to investigate, yet he ended up doing all the work.)
Assignee: sspitzer → bryner
Status: ASSIGNED → NEW
Comment 17•23 years ago
|
||
*** Bug 179791 has been marked as a duplicate of this bug. ***
| Reporter | ||
Updated•23 years ago
|
Summary: Context menu no longer appears in thread pane → Context menu no longer appears in thread or folder panes
| Assignee | ||
Comment 18•23 years ago
|
||
| Assignee | ||
Comment 19•23 years ago
|
||
Attachment #106014 -
Attachment is obsolete: true
Comment 20•23 years ago
|
||
Comment on attachment 106016 [details] [diff] [review]
oops, this one actually has the gtk1 patch
r=varga, tested with linux gtk1 build
Attachment #106016 -
Flags: review+
Updated•23 years ago
|
Attachment #106016 -
Flags: superreview+
| Assignee | ||
Comment 21•23 years ago
|
||
checked in.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Comment 22•23 years ago
|
||
*** Bug 181161 has been marked as a duplicate of this bug. ***
Comment 23•23 years ago
|
||
OK using nov20 commercial trunk build: linux rh8, win98
Status: RESOLVED → VERIFIED
Updated•21 years ago
|
Product: Browser → Seamonkey
You need to log in
before you can comment on or make changes to this bug.
Description
•