Fix context menus in thread pane on Linux by making sure not to re-use an event struct (and its changed event flags) after dispatching it.  Bug 179172, r=varga, sr=blizzard.